css/main.css
/* ... */
.font-size button:hover{
    background-color: rgba(199,196,155,1);
}
@keyframes pulse {
    0% {
        transform: scale(1, 1);
    }
    50% {
        transform: scale(1.1, 1.1);
    }
    100% {
        transform: scale(1, 1);
    }
}

.dashit { display:inline-block; height:3px; position:relative; }


.outer {
    position: relative;
    z-index: 99998;
}

.tna_brand, .about, .learn_more_wrap, .map-zoom {
    z-index: 99999;
    position: absolute;
}

.canvas-viewer {
    z-index: auto;
}


@media (min-width: 1281px) {
    .intro {
        width:40%;
    }
}

@media (min-width: 1200px) {
    .page-branding .container {
        width: 100%;
    }
}

@media (max-width: 767px) {

    .container {
        width:90%;
        padding: 0;
    }
    .inner {
        padding: 10px 10px 50px 10px;
        border-top: 2px solid #5a6434;
        border-bottom: 2px solid #5a6434;
        border-left: 0;
        border-right: 0;
    }
    .s-grid {
        padding-top:10px;
    }
    .overlay {
        width:100%;
        position:relative;

    }
    .info-toolbar-left {
        margin-top:-21px;
        float:none;
    }
    .info .title {
        top:-40px;
    }

    .close {
        margin:20px 10px 0 0;
    }

    .intro {
        display:block;
        padding: 20px 25px 15px 25px;
        position: relative;
        left: 0;
        top: 0;
        transform: translate(0%, 0%);
        width: 100%;
        height:100%;
        text-align: center;
        font-size: 1.2em;
        background-color: #faf8d6;
        box-sizing:border-box;
    }
    .intro img {
        width:40%;
    }
    .st_sharethis_large {
        width:100%;
        margin-top:10px;
    }
}

@media (max-width: 696px) {
    .info-toolbar-right {
        width: 100%;
    }
    .info .button {
        margin-bottom: 0.5em;
    }
}

/* ALL devices at viewport 450 */

@media (max-width:450px){

    .enter-box .col{
        width:100%;
        float:none;
    }

    .enter-box .row{

        width:100%;
    }

    .enter-box .float-right{
        width:60% !important;
        text-align: left;
        padding-left:15px;
    }
    .enter-box .float-left{
        width:40% !important;
        padding:5px;

    }

    .map-zoom {
        width:80px;
        padding:2px;
        text-align: center;
    }
    .tna-brand-page, .about-page {
        width: 100%;
        text-align: center;
    }
    .tna-brand-page img, .about-page img {
        margin: 0 auto;
    }
    .info-toolbar-right {
        width: 100%;
    }
    .info .button {
        margin-bottom: 0.5em;
        width: 100%;
        text-align: center;
    }
    .intro{
        overflow-y: scroll;
    }
}
/* CSS print*/
@media print {
    .inner {
        border:none;
    }
    .inner img {
        width:300px;
    }
    .info-toolbar-left {
        display:none;
    }
}

/* IE 10 */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .info .info_select {
        width: 100%;
        height: 40px;
        overflow: hidden;
        background: none;
        border: 1px solid #e9e7c8;
        z-index: 9999;
        position: relative;
    }
    .info .info_select select {
        width:100%;
        padding: 5px 5px 5px 5px;
    }
}

/* iPhone 6 portrait */
@media only screen
and (min-device-width: 375px)
and (max-device-width: 667px)
and (orientation: portrait)
and (-webkit-min-device-pixel-ratio: 2)
{
    .about {
        right: 5px;
        width: 30%;
    }
    .tna_brand {
        left: 5px;
    }

}

/* iPhone 6 landscape */
@media only screen and (min-device-width: 375px)
and (max-device-width: 667px)
and (orientation: landscape)
and (-webkit-min-device-pixel-ratio: 2)
{

    .learn_more_wrap {
        right:0px;
    }



}

@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)  {


    .intro{
        display:block;
        padding: 20px 25px 15px 25px;
        position: absolute;
        left: 25%;
        top: 10%;
        width: 60%;
        text-align: center;
        font-size: 1.6em;
        background-color: #faf8d6;

    }

}

